# teloc

./: Cargo.toml  HOW-TO-READ-ERRORS.md  README.md
.github/workflows/: ci.yaml
examples/actix_example/: Cargo.toml
examples/actix_example/src/: main.rs  services.rs  utils.rs
teloc/: Cargo.toml
teloc/src/: actix_support.rs  append_hlist.rs  container.rs  container_elem.rs  dependency.rs  dependency_factory.rs  dev.rs  get.rs  get_dependencies.rs  index.rs  lib.rs  lifetime.rs  resolver.rs  scope.rs  service_provider.rs
teloc/tests/: add_by_clone.rs  add_instance.rs  add_transient.rs  assign_outer_variable.rs  derive_unit_struct.rs  dyn_interface.rs  example.rs  factories.rs  free_func_inject.rs  fully_qualified_type.rs  generics.rs  inject_by_clone.rs  inject_by_own.rs  inject_init.rs  inject_with_generics.rs  lifetimes.rs  scoped.rs  tests.rs
teloc_macros/: Cargo.toml
teloc_macros/src/: common.rs  container.rs  derive_teloc.rs  generics.rs  inject.rs  lib.rs  parse.rs
