[package]
name = "teloc"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"
description = "Simple, compile-time DI framework for Rust"
repository = "https://github.com/p0lunin/teloc"
keywords = ["teloc", "di", "ioc", "dependency injection"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/teloc"
readme = "../README.md"

[features]
actix-support = ["actix-web", "futures-util"]
default = []

[dependencies]
actix-web = { version = "3", optional = true }
futures-util = { version = "0.3", optional = true }
frunk = "0.3.1"
once_cell = "1.4.1"
teloc_macros = { path = "../teloc_macros" }

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v4"] }