[package]
name = "teloc"
version = "0.2.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"
description = "Simple, compile-time DI framework for Rust"
repository = "https://github.com/p0lunin/teloc"
keywords = ["teloc", "di", "ioc", "dependency-injection"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/teloc"
readme = "../README.md"

[features]
actix-support = ["actix-web", "actix-http", "actix-router", "pin-project"]
default = []

[dependencies]
actix-web = { version = "3", optional = true }
actix-http = { version = "2", optional = true }
actix-router = { version = "0.2", optional = true }
pin-project = { version = "1", optional = true }
frunk = "0.4.0"
once_cell = "1.4.1"

[dependencies.teloc_macros]
path = "../teloc_macros"
version = "0.2.0"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
