[package]
name = "teloc_macros"
version = "0.2.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"
description = "Macros for teloc framework"
repository = "https://github.com/p0lunin/teloc"
documentation = "https://docs.rs/teloc_macros/"
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"
syn = { version = "1.0.13",  features = ["full", "extra-traits"] }
itertools = "0.9.0"

[lib]
proc-macro = true
