[package]
name = "actix_example"
version = "0.2.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures-util = "0.3.8"
teloc = { path = "../../teloc", features = ["actix-support"] }
